# dynare

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.am  NEWS  NEWS.md  README.md  configure.ac  license.txt  meson.build  meson_options.txt  run_all_tests.m  theme.css
doc/: Makefile.am  bvar-a-la-sims.tex  dr.bib  dr.tex  dynare.texi  guide.tex
doc/AIM/: Dynare AIM use Doc.html  Dynare AIM use Doc.mht  Dynare AIM use Doc.tex
doc/dseries-and-reporting/: Makefile.am  dseriesReporting.tex
doc/gsa/: Makefile.am  gsa.tex  marco.bib
doc/internals/: build_internal_documentation.m  internals.texi
doc/macroprocessor/: macroprocessor.tex
doc/manual/: .gitignore  Makefile  Makefile.am  README.md  make.bat
doc/manual/source/: bibliography.rst  conf.py  dynare-misc-commands.rst  examples.rst  index.rst  installation-and-configuration.rst  introduction.rst  misc-commands.rst  reporting.rst  running-dynare.rst  the-configuration-file.rst  the-model-file.rst  time-series.rst
doc/manual/utils/: dynare_dom.py  dynare_lex.py  version.py.in
doc/parallel/: Makefile.am  parallel.tex
doc/userguide/models/: fs2000ns_steadystate.m
dynare++/doc/: Makefile.am  changelog-old.html  changelog-sylv-old.html  dynare++-tutorial.tex  sylvester.tex  tl.tex
dynare++/integ/cc/: Makefile.am  precalc_quadrature.hh  product.cc  product.hh  quadrature.cc  quadrature.hh  quasi_mcarlo.cc  quasi_mcarlo.hh  smolyak.cc  smolyak.hh  vector_function.cc  vector_function.hh
dynare++/integ/src/: Makefile.am  quadrature-points.cc
dynare++/integ/testing/: Makefile.am  tests.cc
dynare++/kord/: Makefile.am  approximation.cc  approximation.hh  decision_rule.cc  decision_rule.cweb  decision_rule.hh  decision_rule.hweb  dynamic_model.cc  dynamic_model.hh  faa_di_bruno.cc  faa_di_bruno.hh  first_order.cc  first_order.cweb  first_order.hh  global_check.cc  global_check.hh  journal.cc  journal.cweb  journal.hh  kord_exception.hh  korder.cc  korder.cweb  korder.hh  korder_stoch.cc  korder_stoch.hh  korder_stoch.hweb  mersenne_twister.hh  normal_conjugate.cc  normal_conjugate.hh  random.cc  random.hh  seed_generator.cc  seed_generator.hh  tests.cc
dynare++/parser/cc/: Makefile.am  assign.ll  assign.yy  atom_assignings.cc  atom_assignings.h  atom_assignings.hh  atom_substitutions.cc  atom_substitutions.h  atom_substitutions.hh  csv.ll  csv.yy  csv_parser.cc  csv_parser.h  csv_parser.hh  dynamic_atoms.cc  dynamic_atoms.h  dynamic_atoms.hh  fine_atoms.cc  fine_atoms.h  fine_atoms.hh  formula.ll  formula.yy  formula_parser.cc  formula_parser.h  formula_parser.hh  location.h  location.hh  matrix.ll  matrix.yy  matrix_parser.cc  matrix_parser.hh  namelist.cc  namelist.h  namelist.hh  namelist.ll  namelist.yy  parser_exception.cc  parser_exception.hh  static_atoms.cc  static_atoms.h  (+6 more)
dynare++/src/: Makefile.am  dynare3.cc  dynare3.cpp  dynare3.h  dynare3.hh  dynare_atoms.cc  dynare_atoms.h  dynare_atoms.hh  dynare_exception.hh  dynare_model.cc  dynare_model.h  dynare_model.hh  dynare_params.cc  dynare_params.hh  dynglob.ll  dynglob.yy  forw_subst_builder.cc  forw_subst_builder.h  forw_subst_builder.hh  main.cc  main.cpp  nlsolve.cc  nlsolve.h  nlsolve.hh  planner_builder.cc  planner_builder.h  planner_builder.hh
dynare++/sylv/cc/: BlockDiagonal.cc  BlockDiagonal.h  BlockDiagonal.hh  GeneralMatrix.cc  GeneralMatrix.h  GeneralMatrix.hh  GeneralSylvester.cc  GeneralSylvester.h  GeneralSylvester.hh  IterativeSylvester.cc  IterativeSylvester.h  IterativeSylvester.hh  KronUtils.cc  KronUtils.h  KronUtils.hh  KronVector.cc  KronVector.h  KronVector.hh  Makefile.am  QuasiTriangular.cc  QuasiTriangular.h  QuasiTriangular.hh  QuasiTriangularZero.cc  QuasiTriangularZero.h  QuasiTriangularZero.hh  SchurDecomp.cc  SchurDecomp.h  SchurDecomp.hh  SchurDecompEig.cc  SchurDecompEig.h  SchurDecompEig.hh  SimilarityDecomp.cc  SimilarityDecomp.h  SimilarityDecomp.hh  SylvException.cc  SylvException.h  SylvException.hh  SylvMatrix.cc  SylvMatrix.h  SylvMatrix.hh  (+17 more)
dynare++/tests/: Makefile.am  q3a50.mod
dynare++/tl/cc/: Makefile.am  equivalence.cc  equivalence.hh  fine_container.cc  fine_container.hh  fs_tensor.cc  fs_tensor.hh  gs_tensor.cc  gs_tensor.hh  int_sequence.cc  int_sequence.hh  kron_prod.cc  kron_prod.hh  normal_moments.cc  normal_moments.hh  permutation.cc  permutation.hh  ps_tensor.cc  ps_tensor.hh  pyramid_prod.cc  pyramid_prod.hh  pyramid_prod2.cc  pyramid_prod2.hh  rfs_tensor.cc  rfs_tensor.hh  sparse_tensor.cc  sparse_tensor.hh  stack_container.cc  stack_container.hh  sthread.cc  sthread.hh  symmetry.cc  symmetry.hh  t_container.cc  t_container.hh  t_polynomial.cc  t_polynomial.hh  tensor.cc  tensor.hh  tl_exception.hh  (+4 more)
dynare++/tl/testing/: Makefile.am  factory.cc  factory.h  factory.hh  monoms.cc  monoms.h  monoms.hh  tests.cc
mex/sources/: Makefile.am  blas_lapack.F08  defines.F08  dynblas.h  dynlapack.h  dynmex.h  dynumfpack.h  matlab_mex.F08  octave_interleaved.c  pthread.F08  slicot.F08
mex/sources/block_kalman_filter/: block_kalman_filter.cc  block_kalman_filter.h  block_kalman_filter.hh
mex/sources/block_trust_region/: dulmage_mendelsohn.f08  matlab_fcn_closure.F08  matlab_fcn_closure.f08  mexFunction.f08  trust_region.f08
mex/sources/bytecode/: BasicSymbolTable.cc  BasicSymbolTable.hh  ErrorHandling.hh  Evaluate.cc  Evaluate.hh  Interpreter.cc  Interpreter.hh  Mem_Mngr.cc  Mem_Mngr.hh  SparseMatrix.cc  SparseMatrix.hh  bytecode.cc
mex/sources/cycle_reduction/: mexFunction.f08
mex/sources/disclyap_fast/: disclyap_fast.f08
mex/sources/dmm/: design.f90  designInternal.cc  dmm.F  dmm.cc  dynare.f90  logical2Integer.for  mexinterface.f90  mexprint.f90
mex/sources/dynare_minreal/: dynare_minreal.f08
mex/sources/dynare_simul_/: dynare_simul_.cc
mex/sources/estimation/: DecisionRules.cc  DecisionRules.hh  DetrendData.cc  DetrendData.hh  EstimatedParameter.cc  EstimatedParameter.hh  EstimatedParametersDescription.hh  EstimationSubsample.cc  EstimationSubsample.hh  InitializeKalmanFilter.cc  (+20 more)
(+3145 files in other folders)
