noinst_LIBRARIES = libsylv.a

# For dynblas.h and dynlapack.h
libsylv_a_CPPFLAGS = -I$(top_srcdir)/mex/sources

libsylv_a_SOURCES = \
	BlockDiagonal.cc \
	BlockDiagonal.hh \
	GeneralMatrix.cc \
	GeneralMatrix.hh \
	GeneralSylvester.cc \
	GeneralSylvester.hh \
	IterativeSylvester.cc \
	IterativeSylvester.hh \
	KronUtils.cc \
	KronUtils.hh \
	KronVector.cc \
	KronVector.hh \
	QuasiTriangular.cc \
	QuasiTriangular.hh \
	QuasiTriangularZero.cc \
	QuasiTriangularZero.hh \
	SchurDecomp.cc \
	SchurDecomp.hh \
	SchurDecompEig.cc \
	SchurDecompEig.hh \
	SimilarityDecomp.cc \
	SimilarityDecomp.hh \
	SylvException.cc \
	SylvException.hh \
	SylvMatrix.cc \
	SylvMatrix.hh \
	SylvMemory.cc \
	SylvMemory.hh \
	SylvParams.cc \
	SylvParams.hh \
	SylvesterSolver.hh \
	SymSchurDecomp.cc \
	SymSchurDecomp.hh \
	TriangularSylvester.cc \
	TriangularSylvester.hh \
	Vector.cc \
	Vector.hh
