noinst_LIBRARIES = libtl.a

libtl_a_SOURCES = \
	equivalence.cc \
	equivalence.hh \
	fine_container.cc \
	fine_container.hh \
	fs_tensor.cc \
	fs_tensor.hh \
	gs_tensor.cc \
	gs_tensor.hh \
	int_sequence.cc \
	int_sequence.hh \
	kron_prod.cc \
	kron_prod.hh \
	normal_moments.cc \
	normal_moments.hh \
	permutation.cc \
	permutation.hh \
	ps_tensor.cc \
	ps_tensor.hh \
	pyramid_prod.cc \
	pyramid_prod.hh \
	pyramid_prod2.cc \
	pyramid_prod2.hh \
	rfs_tensor.cc \
	rfs_tensor.hh \
	sparse_tensor.cc \
	sparse_tensor.hh \
	stack_container.cc \
	stack_container.hh \
	sthread.cc \
	sthread.hh \
	symmetry.cc \
	symmetry.hh \
	t_container.cc \
	t_container.hh \
	t_polynomial.cc \
	t_polynomial.hh \
	tensor.cc \
	tensor.hh \
	tl_exception.hh \
	tl_static.cc \
	tl_static.hh \
	twod_matrix.cc \
	twod_matrix.hh
libtl_a_CPPFLAGS = -I../../sylv/cc -I../../utils/cc $(CPPFLAGS_MATIO)
libtl_a_CXXFLAGS = $(AM_CXXFLAGS) $(THREAD_CXXFLAGS)
